Fix menu gap replace with right-margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,10 @@ body {
 .menu {
   display: flex;
   justify-content: flex-start;
-  column-gap: 40px;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 40px;
 }
 
 .menu-item-link {
